RESOLVED FIXED226570
REGRESSION(r278336): fast/dom/Window/property-access-on-cached-window-after-frame-removed.html (layout-test) is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=226570
Summary REGRESSION(r278336): fast/dom/Window/property-access-on-cached-window-after-f...
Jean-Yves Avenard [:jya]
Reported 2021-06-03 01:26:04 PDT
REGRESSION(r278336): fast/dom/Window/property-access-on-cached-window-after-frame-removed.html (layout-test) is a constant crash
Attachments
Patch (3.33 KB, patch)
2021-06-03 01:31 PDT, Jean-Yves Avenard [:jya]
no flags
Jean-Yves Avenard [:jya]
Comment 1 2021-06-03 01:27:28 PDT
Jean-Yves Avenard [:jya]
Comment 2 2021-06-03 01:31:57 PDT
EWS
Comment 3 2021-06-03 17:43:15 PDT
Committed r278439 (238460@main): <https://commits.webkit.org/238460@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 430451 [details].
Note You need to log in before you can comment on or make changes to this bug.