REGRESSION(r278336): fast/dom/Window/property-access-on-cached-window-after-frame-removed.html (layout-test) is a constant crash https://bugs.webkit.org/show_bug.cgi?id=226570 rdar://78784709

Reviewed by Eric Carlson.

Now that the coordinator attribute is no longer optional following bug 226328, it can
be iterated while in closed state. Check that the MediaSessionCoordinatorPrivate is set.
Fix crash in existing test.
Fly-by fixes: trailing whitespaces and make header declaration conditional.

* Modules/mediasession/MediaSession.h:
* Modules/mediasession/MediaSessionCoordinator.h:
(WebCore::MediaSessionCoordinator::identifier const): Add nullptr check, return empty String if so.
* Modules/mediasession/MediaSessionCoordinator.idl: Remove trailing whitespace


Canonical link: https://commits.webkit.org/238460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278439 268f45cc-cd09-0410-ab3c-d52691b4dbfc