Source/WebCore/Modules/mediasession/MediaSessionCoordinator.h
@@ -56,7 +56,7 @@ public:
     ExceptionOr<void> leave();
     void close();
 
-    String identifier() const { return m_privateCoordinator->identifier(); }
+    String identifier() const { return m_privateCoordinator ? m_privateCoordinator->identifier() : String(); }
     MediaSessionCoordinatorState state() const { return m_state; }
 
     void seekTo(double, DOMPromiseDeferred<void>&&);
